# adapter-wxwork

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
nonebot/adapters/wxwork/: __init__.py  adapter.py  bot.py  config.py  crypto.py  event.py  exception.py  message.py  models.py  utils.py
tests/: test_import.py
